--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-bitbucket",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Node-RED node for bitbucket",
   "main": "node.js",
   "scripts": {
@@ -20,11 +20,14 @@
     }
   },
   "keywords": [
-    "node-red-contrib-contribgen", 
-    "node-red", 
+    "node-red-contrib-contribgen",
+    "node-red",
+    "git",
+    "alm",
+    "nodejs",
     "bitbucket"
   ],
-  "devDependencies": {
+  "dependencies": {
     "bitbucket": "^2.5.1"
   },
   "license": "Apache-2.0"
